fine tune coverage and options

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "scripts": {
         "prepublish": "npm run build",
         "build": "tsc -p src/lib; tsc -p src/components; tsc -p src/browser; tsc -p src/test;",
-        "instrument": "nyc instrument dist/components/page-banner.js --produce-source-map  > dist/components/page-banner.instrumented.js",
-        "test": "dist/lib/cli.js  test/runner.html",
-        "test-dev": "dist/lib/cli.js -d  test/runner.html"
+        "test": "dist/lib/cli.js dist/components/*.js -f test/runner.html",
+        "test-dev": "dist/lib/cli.js dist/components/*.js -f test/runner.html -d"
     },
     "repository": {
         "type": "git",
@@ -26,6 +25,7 @@
         "browser-sync": "^2.24.6",
         "chai": "^4.1.2",
         "commander": "^2.16.0",
+        "globby": "^8.0.1",
         "istanbul": "^0.4.5",
         "mocha": "^5.2.0",
         "mocha-headless-chrome": "^2.0.1",
@@ -33,8 +33,8 @@
     },
     "devDependencies": {
         "@types/browser-sync": "0.0.41",
+        "@types/globby": "^8.0.0",
         "@types/istanbul": "^0.4.30",
-        "source-map-support": "^0.5.6",
         "typescript": "^3.0.1"
     }
 }
