--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "istanbul": "^0.4.5",
         "mocha": "^5.2.0",
         "mocha-headless-chrome": "^2.0.1",
-        "remap-istanbul": "^0.11.1"
+        "remap-istanbul": "^0.11.1",
+        "source-map-support": "^0.5.6"
     },
     "devDependencies": {
         "@types/browser-sync": "0.0.41",
