--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "prepublish": "npm run build",
         "build": "tsc -p src/lib; tsc -p src/components; tsc -p src/browser; tsc -p src/test;",
+        "help": "dist/lib/cli.js -h",
         "test": "dist/lib/cli.js dist/components/*.js -f test/runner.html",
         "test-dev": "dist/lib/cli.js dist/components/*.js -f test/runner.html -d"
     },
@@ -25,7 +26,6 @@
         "browser-sync": "^2.24.6",
         "chai": "^4.1.2",
         "commander": "^2.16.0",
-        "globby": "^8.0.1",
         "istanbul": "^0.4.5",
         "mocha": "^5.2.0",
         "mocha-headless-chrome": "^2.0.1",
