--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "scripts": {
         "prepublish": "npm run build",
         "build": "tsc -p src/lib; tsc -p src/components; tsc -p src/browser; tsc -p src/test;",
+        "watch": "tsc -p src/lib -w ",
         "help": "dist/lib/cli.js -h",
-        "test": "dist/lib/cli.js dist/components/*.js -f test/runner.html",
+        "test": "dist/lib/cli.js dist/components/page-banner.js -f test/runner.html",
         "test-dev": "dist/lib/cli.js dist/components/*.js -f test/runner.html -d"
     },
     "repository": {
@@ -29,6 +30,8 @@
         "istanbul": "^0.4.5",
         "mocha": "^5.2.0",
         "mocha-headless-chrome": "^2.0.1",
+        "nyc": "^12.0.2",
+        "polyserve": "^0.27.12",
         "remap-istanbul": "^0.11.1",
         "source-map-support": "^0.5.6"
     },
