--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "@hmh/lit-element-tester",
     "version": "0.0.1",
     "description": "Framework to unit test custom elements on Chrome",
-    "bin": "dist/lib/cli.js",
+    "bin": {
+        "lit-element-tester": "dist/lib/cli.js"
+    },
     "main": "dist/lib/index.js",
     "scripts": {
         "prepublish": "npm run build",
