reimplement instrumentation with istanbul api v2

--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -5,7 +5,10 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "rootDir": "../lib",
-        "outDir": "../../dist/lib"
+        "outDir": "../../dist/lib",
+        "typeRoots": [
+            "."
+        ]
     },
     "include": ["../lib/**/*.ts"]
 }
