--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
         "source-map-support": "^0.5.9"
     },
     "devDependencies": {
-        "typescript": "^3.1.3"
+        "typescript": "latest"
     }
 }
