--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "scripts": {
         "clean": "rm -rf node_modules/ package-lock.json dist/",
         "prepare": "npm run build",
-        "build": "tsc -p src/lib; tsc -p src/components; tsc -p src/browser; tsc -p src/test;",
+        "build": "tsc -p src/lib; tsc -p src/components; tsc -p src/browser; tsc -p src/test; tsc -p src",
         "watch": "tsc -p src/lib -w ",
         "help": "dist/lib/cli.js -h",
-        "test": "dist/lib/cli.js dist/components/page-banner.js -f test/runner.html",
+        "test": "dist/lib/cli.js dist/components/*.js -f test/runner.html",
         "test-dev": "dist/lib/cli.js dist/components/*.js -f test/runner.html -d"
     },
     "repository": {
@@ -35,10 +35,14 @@
         "istanbul-lib-instrument": "^3.0.0",
         "mocha": "latest",
         "mocha-headless-chrome": "latest",
+        "prettier": "^1.15.1",
         "remap-istanbul": "latest",
         "source-map-support": "latest"
     },
     "devDependencies": {
+        "@polymer/lit-element": "^0.6.2",
+        "@types/chai": "^4.1.7",
+        "@types/prettier": "^1.13.2",
         "typescript": "latest"
     }
 }
