--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "homepage": "https://github.com/drochgenius/lit-element-tester#readme",
     "dependencies": {
         "@hmh/nodejs-base-server": "latest",
+        "@types/chai": "latest",
+        "@types/mocha": "latest",
         "chai": "latest",
         "commander": "latest",
         "istanbul-api": "^2.0.6",
@@ -35,13 +37,12 @@
         "istanbul-lib-instrument": "^3.0.0",
         "mocha": "latest",
         "mocha-headless-chrome": "latest",
-        "prettier": "^1.15.1",
+        "prettier": "latest",
         "remap-istanbul": "latest",
         "source-map-support": "latest"
     },
     "devDependencies": {
         "@polymer/lit-element": "^0.6.2",
-        "@types/chai": "^4.1.7",
         "@types/prettier": "^1.13.2",
         "typescript": "latest"
     }
