load instrumented files without extensions

--- a/server-config.json
+++ b/server-config.json
@@ -19,7 +19,8 @@
             }
         },
         "LitElementTester": {
-            "instrumentedFiles": ["dist/components/*.js"]
+            "instrumentedFiles": ["dist/components/*.js"],
+            "testClientContentPath": "test/runner.html"
         }
     }
 }
