be more tolerant for instrumented files without extensions

--- a/server-config.json
+++ b/server-config.json
@@ -13,9 +13,7 @@
             "staticContentMaxAge": 0,
             "staticFolderMapping": {
                 "/browser": "dist/browser",
-                "/test": "dist/test",
-                "/unit": "dist/unit",
-                "/mixins": "dist/mixins"
+                "/test": "dist/test"
             }
         },
         "LitElementTester": {
