--- a/server-config.json
+++ b/server-config.json
@@ -13,8 +13,7 @@
             "staticContentMaxAge": 0,
             "staticFolderMapping": {
                 "/browser": "dist/browser",
-                "/unit": "dist/unit",
-                "/mixins": "dist/mixins"
+                "/unit": "dist/unit"
             }
         },
         "LitElementTester": {
