--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "bin": {
         "lit-element-tester": "dist/lib/cli.js"
     },
-    "main": "dist/lib/index.js",
-    "module": "dist/lib/index.js",
+    "main": "dist/index.js",
+    "module": "dist/index.js",
     "scripts": {
         "clean": "rm -rf node_modules/ package-lock.json dist/",
         "prepare": "npm run build",
