update nodejs server

--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -6,9 +6,7 @@
         "moduleResolution": "node",
         "rootDir": "../lib",
         "outDir": "../../dist/lib",
-        "typeRoots": [
-            "."
-        ]
+        "typeRoots": ["."]
     },
-    "include": ["../lib/**/*.ts"]
+    "include": ["../lib/**/*.ts", "../typings.d.ts"]
 }
