--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "istanbul-api": "latest",
         "istanbul-lib-coverage": "latest",
         "istanbul-lib-instrument": "latest",
+        "lit-element": "^2.0.0-rc.2",
         "mocha": "latest",
         "mocha-headless-chrome": "latest",
         "prettier": "latest",
@@ -45,7 +46,6 @@
         "source-map-support": "latest"
     },
     "devDependencies": {
-        "@polymer/lit-element": "^0.6.4",
         "@types/prettier": "latest",
         "concurrently": "latest",
         "typescript": "latest"
