--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "istanbul-api": "latest",
         "istanbul-lib-coverage": "latest",
         "istanbul-lib-instrument": "latest",
-        "lit-element": "^2.0.0-rc.2",
+        "lit-element": "latest",
         "mocha": "latest",
         "mocha-headless-chrome": "latest",
         "prettier": "latest",
