add test static path for proper sourcemap resolution in the browser

--- a/server-config.json
+++ b/server-config.json
@@ -13,7 +13,8 @@
             "staticContentMaxAge": 0,
             "staticFolderMapping": {
                 "/browser": "dist/browser",
-                "/unit": "dist/unit"
+                "/unit": "dist/unit",
+                "/test": "test"
             }
         },
         "LitElementTester": {
